programming-language/workspace/compiler/tests/fixtures/valid/minimal.cb64
# Minimal valid program
def main():
    pass
