programming-language/workspace/compiler/tests/fixtures/invalid/break_outside_loop.cb64
# Break outside loop
def main():
    break
